# rust-openid

./: .env  .gitignore  Cargo.toml  docker-compose.yaml
migrations/2024-02-29-124031_users/: up.sql
src/: main.rs  schema.rs
src/config/: db.rs  mod.rs  router.rs
src/helpers/: error.rs  mod.rs  response.rs
src/models/: user.rs
src/routes/: auth.rs
