[package]
name = "actix-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
derive_more = "0.99.17"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
serde_json = "1.0.96"
dotenv = "0.15.0"
